fix style if section title too long

--- a/app/elements/research/research.scss
+++ b/app/elements/research/research.scss
@@ -1,14 +1,15 @@
 @import '../../styles/main.scss';
 @import '../page/page.scss';
 
-img {
-  margin:20px;
-}
-
 li .title{
   font-weight:bold;
 }
 
 li .content{
   // font-size:16px;
+}
+
+.title{
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
